# cfifo

./: .gitignore  .travis.yml  CMakeLists.txt  README.md  build.sh  size.mk
src/: CMakeLists.txt  cfifo.c  cfifo.h  cfifo_generic.c  cfifo_generic.h  cfifo_specific.c  cfifo_specific.h  cfifo_specific_template.c  cfifo_specific_template.h  cfifo_uint8.c  cfifo_uint8.h
tests/: CMakeLists.txt  c89_test.c  generic_struct_test.c  run_test.c  run_test.cpp  specific_struct_test.c  specific_test.c
